# flask-boilerplate

./: .env.sample  .gitignore  Makefile  Procfile  README.md  app.py  config.py  logic.py  manage.py  models.py  pyproject.toml  requirements.txt  sqlutils.py  test.py  test_app.py  web.py
static/: style.css
templates/: _macros.html  error.html  home.html  login.html  messages.html  signup.html
templates/admin/: home.html  layout.html
