[tool.poetry]
name = "flask-boilerplate"
version = "0.1.0"
description = ""
authors = ["Asif Rahman <asiftr@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Flask = "2.0.2"
Flask-Cors = "3.0.10"
flask-talisman = "0.8.1"
Flask-Mail = "0.9.1"
click = "8.0.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
